--- a/src/components/menu/styles.scss
+++ b/src/components/menu/styles.scss
@@ -9,8 +9,7 @@
   width: 100vw;
   height: 100vh;
   z-index: -1;
-  transition: .5s ease-in;
-  transition-delay: .55s;
+  transition: background-color .5s ease-in, z-index .5s .5s ease-in;
 
   @media only screen and (max-width: 567px) {
     grid-template-columns: 1fr;
