--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,7 @@
 // font-family: 'Playfair Display', serif;
 
 html {
-  background: #000;
+  background: #030303;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
@@ -195,7 +195,7 @@ button {
   bottom: 0;
   left: 0;
   opacity: .06;
-  overflow: hidden;
+  //overflow: hidden;
   width: auto;
   height: auto;
   z-index: 9997;
