--- a/src/components/collectionSlider/styles.scss
+++ b/src/components/collectionSlider/styles.scss
@@ -1,21 +1,31 @@
+
+
 .SliderContainer {
   width: 100vw;
   height: 100vh;
 }
 
 .ContentSliderWrapper {
-  background: black;
+  background: #030303;
   padding: 75px 75px 120px 95px;
   position: absolute;
   top: 50%;
-  left: 45%;
+  left: 43%;
   transform: translateY(-50%);
-  width: 30vw;
+  width: 32vw;
   height: auto;
   z-index: 25;
 
+  .Button {
+    margin: 0;
+    position: relative;
+    top: -5px;
+  }
+
   h2 {
     letter-spacing: 1px;
+    position: relative;
+    text-transform: uppercase;
   }
 
   .Button {
@@ -25,11 +35,12 @@
 
   .slick-prev {
     top: auto;
-    bottom: -120px;
+    bottom: -105px;
     left: -75px;
     width: 45px;
     height: 45px;
-    opacity: .5;
+    transition: .25s ease;
+    opacity: .25;
     
     &:before {
       background: white;
@@ -59,16 +70,18 @@
 
     &:hover, &:focus {
       opacity: 1;
+      left: -85px;
     }
   }
 
   .slick-next {
     top: auto;
-    bottom: -50px;
-    left: -70px;
+    bottom: -105px;
+    right: -45px;
     width: 45px;
     height: 45px;
-    opacity: .5;
+    transition: .25s;
+    opacity: .25;
 
     &:before {
       background: white;
@@ -98,6 +111,7 @@
 
     &:hover, &:focus {
       opacity: 1;
+      right: -55px;
     }
   }
 
@@ -127,7 +141,7 @@
         content: '';
         color: white;
         display: block;
-        opacity: .5;
+        opacity: .25;
         position: absolute;
         top: 0;
         left: 0;
@@ -231,7 +245,7 @@
 }
 
 .SliderContentBg {
-  background: black;
+  background: #030303;
   max-width: 500px;
   padding: 75px;
   position: absolute;
