--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -1,3 +1,5 @@
+
+
 .AppHero {
   margin: 0;
   padding: 0;
@@ -84,18 +86,6 @@
   padding-bottom: 0;
   position: relative;
 
-  &:after {
-    background: rgba(0,0,0, 0.9);
-    content: '';
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50%;
-    height: 100%;
-    z-index: -1;
-  }
-
   figure {
     background: url('../../ui/img/roses.jpg') center center no-repeat;
     background-size: cover;
@@ -121,6 +111,18 @@
     width: 50vw;
     height: 100%;
     z-index: 9998;
+
+    &:after {
+      background: rgba(0,0,0, 0.9);
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 50%;
+      height: 100%;
+      z-index: -1;
+    }
 
     .Button {
       margin: 25px 0 0;
@@ -153,6 +155,13 @@
       transform: translate(0, -50%);
       padding: 50px;
       width: auto;
+    }
+  }
+
+  &.CenterContent {
+    text-align: center;
+    .CenterContentWrapper {
+      background: rgba(0,0,0,.85);
     }
   }
 }
